Karan | DockerTest | Updated the testng suite and added basic Docker commands file